tests/NormalTests/paczka1/small_fuzzy/83741240.err
Error in line 3: 5hSSMStm S641 27,5
Error in line 5: 5hSSMStm S183 209,7
Error in line 7: 5hSSMStm A415 30,9
Error in line 15: 5hSSMStm S641 -1,2
